--- a/TaskAll.conf
+++ b/TaskAll.conf
@@ -1,6 +1,5 @@
-hostname=api.bigfun.cn,dkd-api.dysdk.com,ymz.iphonezhuan.com,
-api.sxsjyzm.com
-
+hostname=api.bigfun.cn,dkd-api.dysdk.com,ymz.iphonezhuan.com,api.sxsjyzm.com
+ 
 BY:age174
 #获取bigfunCookie 
 ^https:\/\/api\.bigfun\.cn\/webview\/iphone? url script-request-body https://raw.githubusercontent.com/age174/-/main/bigfun.js
