--- a/TaskAll.conf
+++ b/TaskAll.conf
@@ -1,4 +1,4 @@
-hostname=api.bigfun.cn,dkd-api.dysdk.com,ymz.iphonezhuan.com,api.sxsjyzm.com,
+hostname =www.52pojie.cn, c.tieba.baidu.com, manga.bilibili.com, api.m.jd.com, did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.com,
  
 BY:age174
 #获取bigfunCookie 
