--- a/TaskAll.conf
+++ b/TaskAll.conf
@@ -1,6 +1,6 @@
-hostname =www.52pojie.cn, c.tieba.baidu.com, manga.bilibili.com, api.m.jd.com, did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.com,
+hostname =did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.com,
  
-BY:age174
+#BY:age174
 #获取bigfunCookie 
 ^https:\/\/api\.bigfun\.cn\/webview\/iphone? url script-request-body https://raw.githubusercontent.com/age174/-/main/bigfun.js
 #获取多看点Cookie 
