--- a/Task_Cookie.conf
+++ b/Task_Cookie.conf
@@ -1,4 +1,4 @@
-hostname =did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.com,
+hostname = api.bigfun.cn, did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.com,
  
 #获取bigfunCookie 
 ^https:\/\/api\.bigfun\.cn\/webview\/iphone? url script-request-body https://raw.githubusercontent.com/age174/-/main/bigfun.js
