--- a/Task_Cookie.conf
+++ b/Task_Cookie.conf
@@ -1,4 +1,4 @@
-hostname = api.bigfun.cn, did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.com, api3-normal-c-*.huoshan.com, veishop.iboxpay.com
+hostname = api.bigfun.cn, did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.com, veishop.iboxpay.com,
  
 #获取bigfunCookie 
 ^https:\/\/api\.bigfun\.cn\/webview\/iphone? url script-request-body https://raw.githubusercontent.com/age174/-/main/bigfun.js
@@ -12,8 +12,9 @@ hostname = api.bigfun.cn, did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.co
 ^http://ymz.iphonezhuan.com/addaction url script-request-body https://raw.githubusercontent.com/age174/-/main/ymz.js
 #芝麻视频
 ^https://api.sxsjyzm.com/api2/loot/index url script-request-body https://raw.githubusercontent.com/age174/-/main/zmsp.js
-#抖音火山视频
-https://api3-normal-c-\w+.huoshan.com/hotsoon/flame/task_done/? url script-request-body https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/huoshan.js
-https://api3-normal-c-\w+.huoshan.com/hotsoon/item/reaction/_play/? url script-request-body https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/huoshan.js
 #笑谱
 https:\/\/veishop\.iboxpay\.com\/nf_gateway\/nf_customer_activity\/day_cash\/v1\/give_gold_coin_by_video\.json url script-request-body https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/xp.js
+#笑谱获取header
+https:\/\/veishop\.iboxpay\.com\/* url script-request-header https://raw.githubusercontent.com/ziye12/JavaScript/main/Task/iboxpay.js
+#笑谱获取更新TOKEN
+https:\/\/veishop\.iboxpay\.com\/nf_gateway\/nf-user-auth-web\/ignore_tk\/veishop\/v1\/* url script-response-body https://raw.githubusercontent.com/ziye12/JavaScript/main/Task/iboxpay.js
