--- a/Task_Cookie.conf
+++ b/Task_Cookie.conf
@@ -1,5 +1,6 @@
-hostname = api.bigfun.cn, did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.com, veishop.iboxpay.com,
- 
+hostname = api.bigfun.cn, did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.com, veishop.iboxpay.com, wq.jd.com, bububao.duoshoutuan.com, m.xiaomiyoupin.com, *.bilibili.com, commontgw6.reader.qq.com, eventv3.reader.qq.com, youth.cn, ios.baertt.com, operation-api.jimistore.com, account.huami.com, crazy-joy.jd.com, draw.jdfcloud.com, sf-integral-sign-in.weixinjia.net,
+
+
 #获取bigfunCookie 
 ^https:\/\/api\.bigfun\.cn\/webview\/iphone? url script-request-body https://raw.githubusercontent.com/age174/-/main/bigfun.js
 #获取多看点Cookie 
@@ -18,3 +19,20 @@ https:\/\/veishop\.iboxpay\.com\/nf_gateway\/nf_customer_activity\/day_cash\/v1\
 https:\/\/veishop\.iboxpay\.com\/* url script-request-header https://raw.githubusercontent.com/ziye12/JavaScript/main/Task/iboxpay.js
 #笑谱获取更新TOKEN
 https:\/\/veishop\.iboxpay\.com\/nf_gateway\/nf-user-auth-web\/ignore_tk\/veishop\/v1\/* url script-response-body https://raw.githubusercontent.com/ziye12/JavaScript/main/Task/iboxpay.js
+#京喜农场
+^https\:\/\/wq\.jd\.com\/cubeactive\/farm\/dotask - script-request-header https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_tokens.js
+#JD_COOKIE
+https:\/\/wq\.jd\.com\/user_new\/info\/GetJDUserInfoUnion - script-request-header https://raw.githubusercontent.com/dompling/Script/master/jd/JD_extra_cookie.js
+#步步宝
+https://bububao.duoshoutuan.com/user/profile - script-request-header https://raw.githubusercontent.com/adwktt/adwktt/master/BBB.js
+#酷我音乐VIP
+^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Kuwo.js
+^https?:\/\/musicpay\.kuwo\.cn\/music\.pay\?uid\=\d+ url 302 http://musicpay.kuwo.cn/music.pay?uid=1
+#番剧
+https?:\/\/app.bilibili.com\/x\/v2\/space\/bangumi url script-request-header https://raw.githubusercontent.com/lowking/Scripts/master/bilibili/bangumiMonitor.js
+# 小米运动获取Token
+^https:\/\/account\.huami\.com\/v2\/client\/login url script-response-body https://gitee.com/lxk0301/jd_scripts/raw/master/backUp/xmSports.js
+# 宠汪汪助力更新Token
+^https:\/\/draw\.jdfcloud\.com\/\/api\/user\/addUser\?code= url script-response-body https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_run.js
+# 宠汪汪助力获取Token
+^https:\/\/draw\.jdfcloud\.com\/\/api\/user\/user\/detail\?openId= url script-request-header https://gitee.com/lxk0301/jd_scripts/raw/master/jd_joy_run.js
