--- a/GetCookie_Always.conf
+++ b/GetCookie_Always.conf
@@ -1,5 +1,6 @@
 hostname = api*-normal-lite-act-*.amemv.com, veishop.iboxpay.com, hotsoon-.*.snssdk.com, api3-normal-c-*.huoshan.com
 
+#长期需要使用的获取cookie不禁用
 #笑谱获取更新TOKEN
 https:\/\/veishop\.iboxpay\.com\/nf_gateway\/nf-user-auth-web\/ignore_tk\/veishop\/v1\/* - script-response-body https://raw.githubusercontent.com/ziye12/JavaScript/main/Task/iboxpay.js
 #酷我音乐VIP
