--- a/GetCookie_Always.conf
+++ b/GetCookie_Always.conf
@@ -1,4 +1,4 @@
-hostname = api*-normal-lite-act-*.amemv.com, veishop.iboxpay.com, hotsoon-.*.snssdk.com, api3-normal-c-*.huoshan.com
+hostname =  veishop.iboxpay.com, vip1.kuwo.cn,account.huami.com,  draw.jdfcloud.com,
 
 #长期需要使用的获取cookie不禁用
 #笑谱获取更新TOKEN
