--- a/GetCookie_temp.conf
+++ b/GetCookie_temp.conf
@@ -1,5 +1,4 @@
-hostname = api.bigfun.cn, did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.com, veishop.iboxpay.com, wq.jd.com, bububao.duoshoutuan.com, m.xiaomiyoupin.com, *.bilibili.com, commontgw6.reader.qq.com, eventv3.reader.qq.com, youth.cn, ios.baertt.com, operation-api.jimistore.com, account.huami.com, crazy-joy.jd.com, draw.jdfcloud.com, sf-integral-sign-in.weixinjia.net
-
+hostname = api.bigfun.cn, dkd-api.dysdk.com, did-api.dysdk.com, ymz.iphonezhuan.com, api.sxsjyzm.com, veishop.iboxpay.com, wq.jd.com, m.jingxi.com, bububao.duoshoutuan.com, *.bilibili.com, 
 #临时获取cookie后可以禁用
 #获取bigfunCookie 
 ^https:\/\/api\.bigfun\.cn\/webview\/iphone? url script-request-body https://raw.githubusercontent.com/age174/-/main/bigfun.js
