--- a/GetCookie_temp.conf
+++ b/GetCookie_temp.conf
@@ -56,3 +56,5 @@ https://wzq.tenpay.com/cgi-bin/redpoint.fcgi? url script-request-header https://
 https://zqact03.tenpay.com/activity/page/raisebull/ url script-request-header https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txs_cookie.js
 #电信金豆
 https:\/\/alipaymini\.189\.cn:8043\/treasureBox\/queryUserActivityInfo url script-request-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dxbox.js
+#快手极速版获取cookie
+https:\/\/nebula\.kuaishou\.com\/nebula\/task\/earning\? url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js
